Create user seed, update models

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   postgres:
     image: postgres
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/home/volume/data
     environment:
       POSTGRES_DB: development
       POSTGRES_USER: root
