--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Description",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node --inspect --trace-deprecation src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
